@@ -12,3 +12,4 @@ The following bugs have been fixed:
 
 * [`2268 <https://cta-redmine.irap.omp.eu/issues/2268>`_] -
   Correct background interpolation in ``GCTACubeBackground::operator()``
+* Correct bug in ``GModelSpatialComposite::copy_members()``
